--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
 NODE_ENV=development
-MONGO_URL="mongodb+srv://sagar:sagar1101G@cluster0.4lslk6m.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://sagar:sagar1101G@cluster0.4lslk6m.mongodb.net/devcamper?retryWrites=true&w=majority"
